about page pic stretch fix again 4

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -23,7 +23,7 @@
   justify-content: center;
   max-width: 400px;
   object-fit: cover;
-  height: 400px;
+  /* height: 400px; */
   width: 400px;
   overflow: hidden;
 }
@@ -37,6 +37,7 @@
 @media (max-width: 550px) {
   .mug {
       width: 80%;
+      margin-top: -200px;
   }
 }
 
